# YT-DLCOMP

./: .gitignore  CMakeLists.txt  README.md
include/: ApiKeyDialog.hpp  Entry.hpp  FilesPanel.hpp  MainFrame.hpp  MyApp.hpp  SettingsPanel.hpp  VideoMetadata.hpp  interface.hpp
scripts/: newClass.bat
src/: ApiKeyDialog.cpp  FilesPanel.cpp  MainFrame.cpp  MyApp.cpp  SettingsPanel.cpp  interface.cpp
